QA-13059: prevent anthracite for breaking gwt dom, QA-13060: makes context menu visible (#637)

--- a/war/src/main/webapp/engines/jahia-anthracite/css/app/pickers/_overrides.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/css/app/pickers/_overrides.scss
@@ -35,6 +35,9 @@
     z-index: 99999 !important;
 }
 
+.imagepickerContextMenu {
+    z-index: 999999 !important;
+}
 
 // Corrections for Managers ( extends normal picker )
 #contentmanager {
